fix: keep image from clipping through box

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   border-radius: 6px;
   margin-top: 10px;
   margin-bottom: 10px;
+  overflow: hidden;
 }
 
 .icon {
